fix(mails): hover colors had low contrast misc: add vscode recommendation for easier color tweaking in editor

--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ calendar-minimonth {
   border-color: transparent;
 }
 
-#messagepanebox {
+#messagePane #messagepanebox {
   --layout-background-1: var(--c-message-pane-box-background) !important;
 }
 
